fixes 2919 where there wasn't sufficient spacing between comments

--- a/app/assets/site/comments.styl
+++ b/app/assets/site/comments.styl
@@ -6,6 +6,7 @@ indent = 2 + f4
 
 .panel-comments-comment
   margin-bottom 1
+  margin-top 1
 
   .comment-reply-form
   &.depth-1
